--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/default.css">
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/w2ui-1.4.1.min.js"></script>
+<script type="text/javascript" src="js/ui.js"></script>
 </head>
 
 <body class="login">
