--- a/layout_guide.html
+++ b/layout_guide.html
@@ -244,8 +244,10 @@
 				<a href="#" class="btnM btnMlf"><span>Write</span></a>
 			</div>
 
-			
-
+			<h2 class="subTitle">서브타이틀</h2>
+			<div class="addBtn">
+				<a href="#" class="btnProduct">제품 추가</a>
+			</div>
 			<!-- 탭메뉴 -->
 			<div class="tabMenu">
 				<ul>
@@ -258,7 +260,8 @@
 				</ul>
 			</div>
 			<!-- //탭메뉴 -->
-
+			
+			<!-- 스크롤 게시판-->
 			<div class="bbsList">
 				<div class="scrollHead">
 					<table>
@@ -430,6 +433,7 @@
 					</table>
 				</div>
 			</div>
+			<!-- //스크롤 게시판-->
 
 			<br /><br />
 
