--- a/layout_guide.html
+++ b/layout_guide.html
@@ -140,6 +140,13 @@
 
 		<!-- contents -->
 		<div id="contents">
+			<div class="pageTop">
+				<h2 class="tit">태그 발행 오더</h2>
+				<div class="btns">
+					<a href="#" class="btnExcelRegi">엑셀 등록</a>
+					<a href="#" class="btnWebRegi">웹 등록</a>
+				</div>
+			</div>
 			<!-- 검색 -->
 			<div class="searchWrap">
 				<div class="searchTable">
@@ -239,6 +246,7 @@
 				</select>
 			</p>
 			<div class="bbsBtn">
+				<a href="#" class="btnExcel">엑셀 저장</a>
 				<a href="#" class="btnM btnMlf"><span>Delete</span></a>
 				<a href="#" class="btnM btnMb"><span>Upload</span></a>
 				<a href="#" class="btnM btnMlf"><span>Write</span></a>
