--- a/main.html
+++ b/main.html
@@ -78,6 +78,12 @@
 	<!-- container -->
 	<div id="container">
 		<h1><img src="images/img_main_logo.png" alt="COOK MEDICAL" /></h1>
+		<p class="selDate">
+			<select>
+				<option>2016 - 03 - 30</option>
+			</select>
+			업무요약
+		</p>
 		<div class="mainWrap">
 			<div class="mainItem1">
 				<h2 class="tit">RFID 태그관리</h2>
