--- a/layout_guide.html
+++ b/layout_guide.html
@@ -135,11 +135,10 @@
 			</div>
 		</div>
 		<!-- //snb -->
-
-		<button type="button" class="btnSnb"><span>메뉴 숨김</span></button>
-
+		<button type="button" class="btnSnb">메뉴 접기 / 펼치기</button>
 		<!-- contents -->
 		<div id="contents">
+			
 			<div class="pageTop">
 				<h2 class="tit">태그 발행 오더</h2>
 				<div class="btns">
@@ -247,9 +246,9 @@
 			</p>
 			<div class="bbsBtn">
 				<a href="#" class="btnExcel">엑셀 저장</a>
-				<a href="#" class="btnM btnMlf"><span>Delete</span></a>
-				<a href="#" class="btnM btnMb"><span>Upload</span></a>
-				<a href="#" class="btnM btnMlf"><span>Write</span></a>
+				<a href="#" class="mBtnLf">Delete</a>
+				<a href="#" class="mBtnB">Upload</span></a>
+				<a href="#" class="mBtnLf">Write</a>
 			</div>
 
 			<h2 class="subTitle">서브타이틀</h2>
@@ -259,281 +258,195 @@
 			<!-- 탭메뉴 -->
 			<div class="tabMenu">
 				<ul>
-					<li><a href="#" class="on"><span>All</span></a></li> <!-- 활성화 시 a링크에 class="on" -->
-					<li><a href="#"><span>Packaging</span></a></li>
-					<li><a href="#"><span>Delivery</span></a></li>
-					<li><a href="#"><span>Arrive</span></a></li>
-					<li><a href="#"><span>Error</span></a></li>
-					<li><a href="#"><span>Delete</span></a></li>
+					<li><a href="#" class="on">All</a></li> <!-- 활성화 시 a링크에 class="on" -->
+					<li><a href="#">Packaging</a></li>
+					<li><a href="#">Delivery</a></li>
+					<li><a href="#">Arrive</a></li>
+					<li><a href="#">Error</a></li>
+					<li><a href="#">Delete</a></li>
 				</ul>
 			</div>
 			<!-- //탭메뉴 -->
-			
-			<!-- 스크롤 게시판-->
-			<div class="bbsList">
-				<div class="scrollHead">
-					<table>
-						<caption>목록</caption>
-						<thead>
-							<tr>
-								<th scope="col"><input type="checkbox" class="chk" /></th>
-								<th scope="col">Order No</th>
-								<th scope="col">Order Type</th>
-								<th scope="col">Customer / Location</th>
-								<th scope="col">Total Oty</th>
-								<th scope="col">State</th>
-								<th scope="col">View</th>
-								<th scope="col">Partner</th>
-								<th scope="col">Director</th>
-								<th scope="col">Order Date</th>
-							</tr>
-						</thead>
-					</table>
-				</div>
-				<div class="scrollBody">
-					<table>
-						<tbody>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr class="lineType1">
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr class="lineType2">
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr class="lineType3">
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr class="lineType4">
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-							<tr>
-								<td><input type="checkbox" class="chk" /></td>
-								<td>To67062671</td>
-								<td>WHM</td>
-								<td>아산병원 / AI</td>
-								<td>30</td>
-								<td>WHM-pack</td>
-								<td>O</td>
-								<td>DKSH</td>
-								<td>MJOON</td>
-								<td>2016. 03. 31</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-			<!-- //스크롤 게시판-->
-
-			<br /><br />
-
 			<!-- 게시판 목록 -->
 			<div class="bbsList">
-				<table>
-					<caption>공지사항</caption>
-					<colgroup>
-						<col style="width:8%" />
-						<col style="width:12%" />
-						<col />
-						<col style="width:10%" />
-						<col style="width:10%" />
-						<col style="width:8%" />
-					</colgroup>
-					<thead>
-						<tr>
-							<th scope="col">No</th>
-							<th scope="col">구분</th>
-							<th scope="col">제목</th>
-							<th scope="col">첨부</th>
-							<th scope="col">등록일</th>
-							<th scope="col">HIT</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-						<tr>
-							<td>1244</td>
-							<td>KEIDAS</td>
-							<td class="txt"><a href="#">서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</a></td>
-							<td class="file"><span>3</span></td>
-							<td>2013 / 03 / 01</td>
-							<td>35</td>
-						</tr>
-					</tbody>
-				</table>
+				<style type="text/css">
+				.bbsList .num {width:8%;}
+				.bbsList .sort {width:12%;}
+				.bbsList .num {width:8%;}
+				.bbsList .file {width:10%;}
+				.bbsList .date {width:10%;}
+				.bbsList .hit {width:8%;}
+				</style>
+				<ul>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 </span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<span class="num">
+								<strong class="tit">No</strong>
+								<span>1244</span>
+							</span>
+							<span class="sort">
+								<strong class="tit">구분</strong>
+								<span>관리자</span>
+							</span>
+							<span class="subject">
+								<strong class="tit">제목</strong>
+								<span>서비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경비스 정책 변경 관련 안내 납품관리 및 마감 정산 등 엑셀양식 변경</span>
+							</span>
+							<span class="file">
+								<strong class="tit">첨부</strong>
+								<span>3</span>
+							</span>
+							<span class="date">
+								<strong class="tit">등록일</strong>
+								<span>2013 / 03 / 01</span>
+							</span>
+							<span class="hit">
+								<strong class="tit">HIT</strong>
+								<span>40</span>
+							</span>
+						</a>
+					</li>
+				</ul>
 			</div>
 			<div class="btnWrap">
 				<div class="bbsSearch">
@@ -542,10 +455,10 @@
 						<option>검색</option>
 					</select>
 					<input type="text" class="txt" style="width:240px;" />
-					<a href="#" class="btnM btnMlf"><span>검색</span></a>
+					<a href="#" class="mBtnLf">검색</a>
 				</div>
 				<div class="btnRight">
-					<a href="#" class="btnM btnMb"><span>Write</span></a>
+					<a href="#" class="mBtnB">Write</a>
 				</div>
 			</div>
 			<!-- //게시판 목록 -->
@@ -594,8 +507,8 @@
 					ⓒ 영진닷컴 <br />
 					▲ⓒ 영진닷컴
 					<div class="btnWrap">
-						<a href="#" class="btnS btnSlf"><span>Modify</span></a>
-						<a href="#" class="btnS btnSb"><span>Save</span></a>
+						<a href="#" class="sBtnLf">Modify</a>
+						<a href="#" class="sBtnB">Save</a>
 					</div>
 				</div>
 				<ul class="viewNav">
@@ -610,9 +523,9 @@
 				</ul>
 			</div>
 			<div class="btnWrap">
-				<a href="#" class="btnM btnMlf"><span>Delete</span></a>
-				<a href="#" class="btnM btnMlf"><span>Re Question</span></a>
-				<a href="#" class="btnM btnMb"><span>List</span></a>
+				<a href="#" class="mBtnLf">Delete</a>
+				<a href="#" class="mBtnLf">Re Question</a>
+				<a href="#" class="mBtnB">List</a>
 			</div>
 			<!-- //게시판 보기 -->
 			<br /><br />
@@ -662,24 +575,24 @@
 				</table>
 			</div>
 			<div class="btnWrap">
-				<a href="#" class="btnM btnMlf"><span>List</span></a>
-				<a href="#" class="btnM btnMb"><span>Save</span></a>
+				<a href="#" class="mBtnLf">List</a>
+				<a href="#" class="mBtnB">Save</a>
 			</div>
 			<!-- //게시판 쓰기 -->
 			<!-- 버튼 -->
 			<div class="btnWrap">
 				<a href="#" class="btnProduct">제품 추가</a>
-				<a href="#" class="btnS btnSlf"><span>Modify</span></a>
-				<a href="#" class="btnS btnSb"><span>Save</span></a>
-				<a href="#" class="btnM btnMlf"><span>Re Question</span></a>
-				<a href="#" class="btnM btnMlf"><span>Modify</span></a>
-				<a href="#" class="btnM btnMb"><span>List</span></a>
-				<a href="#" class="btnM btnMb"><span>Save</span></a>
-				<a href="#" class="btnM btnMlf"><span>Short View</span></a>
-				<a href="#" class="btnM btnMlf"><span>List</span></a>
-				<a href="#" class="btnM btnMlf btnPrint"><span>Print</span></a>
-				<a href="#" class="btnM btnMlf btnDown"><span>Download</span></a>
-				<a href="#" class="btnM btnMlf btnHistory"><span>History</span></a>
+				<a href="#" class="sBtnLf">Modify</a>
+				<a href="#" class="sBtnB">Save</a>
+				<a href="#" class="mBtnLf">Re Question</a>
+				<a href="#" class="mBtnLf">Modify</a>
+				<a href="#" class="mBtnB">List</a>
+				<a href="#" class="mBtnB">Save</a>
+				<a href="#" class="mBtnLf">Short View</a>
+				<a href="#" class="mBtnLf">List</a>
+				<a href="#" class="mBtnLf btnPrint">Print</a>
+				<a href="#" class="mBtnLf btnDown">Download</a>
+				<a href="#" class="mBtnLf btnHistory">History</a>
 			</div>
 			<div class="btnWrap">
 				<div class="bbsSearch">
@@ -688,24 +601,24 @@
 						<option>검색</option>
 					</select>
 					<input type="text" class="txt" style="width:240px;" />
-					<a href="#" class="btnM btnMlf"><span>검색</span></a>
+					<a href="#" class="mBtnLf">검색</a>
 				</div>
 				<div class="btnRight">
-					<a href="#" class="btnM btnMb"><span>Write</span></a>
+					<a href="#" class="mBtnB">Write</a>
 				</div>
 			</div>
 			<div class="btnWrap">
 				<div class="btnRight">
-					<a href="#" class="btnM btnMb"><span>Write</span></a>
-					<a href="#" class="btnM btnMlf"><span>Modify</span></a>
-					<a href="#" class="btnM btnMb"><span>List</span></a>
+					<a href="#" class="mBtnB">Write</a>
+					<a href="#" class="mBtnLf">Modify</a>
+					<a href="#" class="mBtnB">List</a>
 				</div>
 			</div>
 			<div class="btnWrap">
 				<div class="btnLeft">
-					<a href="#" class="btnM btnMb"><span>Write</span></a>
-					<a href="#" class="btnM btnMlf"><span>Modify</span></a>
-					<a href="#" class="btnM btnMb"><span>List</span></a>
+					<a href="#" class="mBtnB">Write</a>
+					<a href="#" class="mBtnLf">Modify</a>
+					<a href="#" class="mBtnB">List</a>
 				</div>
 			</div>
 			<!-- //버튼 -->
