--- a/main.html
+++ b/main.html
@@ -17,6 +17,9 @@
 	<div id="header">
 		<div class="headTop">
 			<h1><a href="/"><img src="images/img_logo.png" alt="COOk Medical" /></a></h1>
+			<button type="button" class="btnMobNav"><span>메뉴 열기 / 닫기</span></button>
+		</div>
+		<div id="gnb">
 			<div class="headMenu">
 				<a href="#" class="link mypage">My page</a>
 				<a href="#" class="link logout">Logout</a>
@@ -24,8 +27,6 @@
 					<option>Korean</option>
 				</select>
 			</div>
-		</div>
-		<div id="gnb">
 			<div class="gnbNav">
 				<ul>
 					<li><a href="#">RFID태그관리</a>
@@ -87,102 +88,112 @@
 		</p>
 		<div class="mainWrap">
 			<div class="mainItem1">
-				<h2 class="tit">RFID 태그관리</h2>
-				<ul class="itemList">
-					<li>발행수 : <span>340</span></li>
-					<li>부착 : <span>320</span></li>
-					<li>미부착 : <span>17</span></li>
-					<li>오류 : <span class="fcR">2</span></li>
-				</ul>
+				<div>
+					<h2 class="tit">RFID 태그관리</h2>
+					<ul class="itemList">
+						<li>발행수 : <span>340</span></li>
+						<li>부착 : <span>320</span></li>
+						<li>미부착 : <span>17</span></li>
+						<li>오류 : <span class="fcR">2</span></li>
+					</ul>
+				</div>
 			</div>
 			<div class="mainItem2">
-				<h2 class="tit">구매관리</h2>
-				<ul class="itemList">
-					<li>총 오더 : <span>200</span></li>
-					<li>Packaging 완료 : <span>195</span></li>
-					<li>작업중 : <span>2</span></li>
-					<li>오류 : <span class="fcR">2</span></li>
-				</ul>
+				<div>
+					<h2 class="tit">구매관리</h2>
+					<ul class="itemList">
+						<li>총 오더 : <span>200</span></li>
+						<li>Packaging 완료 : <span>195</span></li>
+						<li>작업중 : <span>2</span></li>
+						<li>오류 : <span class="fcR">2</span></li>
+					</ul>
+				</div>
 			</div>
 			<div class="mainItem3">
-				<h2 class="tit">납품관리</h2>
-				<ul class="itemList">
-					<li>총오더 : <span>200(TO : 196 / SO : 4</span></li>
-					<li>Packaging 완료 : <span>100</span></li>
-					<li>Delivery : <span>50</span></li>
-					<li>Arrive : <span>40</span></li>
-					<li>오류 : <span>7</span></li>
-					<li>미확인 : <span>3</span></li>
-				</ul>
+				<div>
+					<h2 class="tit">납품관리</h2>
+					<ul class="itemList">
+						<li>총오더 : <span>200(TO : 196 / SO : 4</span></li>
+						<li>Packaging 완료 : <span>100</span></li>
+						<li>Delivery : <span>50</span></li>
+						<li>Arrive : <span>40</span></li>
+						<li>오류 : <span>7</span></li>
+						<li>미확인 : <span>3</span></li>
+					</ul>
+				</div>
 			</div>
 			<div class="mainItem4">
-				<h2 class="tit">재고관리</h2>
-				<ul class="itemList">
-					<li>SSL : <span class="fcR">78</span></li>
-					<li>UBD : <span class="fcB">45</span></li>
-				</ul>
+				<div>
+					<h2 class="tit">재고관리</h2>
+					<ul class="itemList">
+						<li>SSL : <span class="fcR">78</span></li>
+						<li>UBD : <span class="fcB">45</span></li>
+					</ul>
+				</div>
 			</div>
-			<div class="mainItem5">
-				<h2 class="tit">NOTICE</h2>
-				<ul class="noticeList">
-					<li>
-						<a href="#">
-							<span class="sort">[KEIDAS]</span>
-							<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[Cook]</span>
-							<span class="txt">4월 긴급배송건 공지 안내</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[KEIDAS]</span>
-							<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[Cook]</span>
-							<span class="txt">4월 긴급배송건 공지 안내</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[KEIDAS]</span>
-							<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[Cook]</span>
-							<span class="txt">4월 긴급배송건 공지 안내</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[KEIDAS]</span>
-							<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<span class="sort">[Cook]</span>
-							<span class="txt">4월 긴급배송건 공지 안내</span>
-							<span class="date">2016.3.28</span>
-						</a>
-					</li>
-				</ul>
-				<a href="#" class="more"><span>공지사항 더보기</span></a>
+			<div class="mainItemFull">
+				<div>
+					<h2 class="tit">NOTICE</h2>
+					<ul class="noticeList">
+						<li>
+							<a href="#">
+								<span class="sort">[KEIDAS]</span>
+								<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[Cook]</span>
+								<span class="txt">4월 긴급배송건 공지 안내</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[KEIDAS]</span>
+								<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[Cook]</span>
+								<span class="txt">4월 긴급배송건 공지 안내</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[KEIDAS]</span>
+								<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[Cook]</span>
+								<span class="txt">4월 긴급배송건 공지 안내</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[KEIDAS]</span>
+								<span class="txt"> 엑셀 오더 Write시 자동 분류 서비스 시작 엑셀 오더 Write시 자동 분류 서비스 시작</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="sort">[Cook]</span>
+								<span class="txt">4월 긴급배송건 공지 안내</span>
+								<span class="date">2016.3.28</span>
+							</a>
+						</li>
+					</ul>
+					<a href="#" class="more"><span>공지사항 더보기</span></a>
+				</div>
 			</div>
 		</div>
 	</div>
