--- a/layout_guide.html
+++ b/layout_guide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<title>KEIDAS</title>
+<title>admin</title>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes, target-densitydpi=medium-dpi" name="viewport">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -273,7 +273,7 @@
 				.bbsList .sort {width:12%;}
 				.bbsList .num {width:8%;}
 				.bbsList .file {width:10%;}
-				.bbsList .date {width:10%;}
+				.bbsList .date {width:12%;}
 				.bbsList .hit {width:8%;}
 				</style>
 				<ul>
