--- a/layout_guide.html
+++ b/layout_guide.html
@@ -256,10 +256,11 @@
 			</div>
 			<!-- 탭메뉴 -->
 			<div class="tabMenu">
+				<button type="button" class="tabBtn">All</button>
 				<ul>
-					<li><a href="#" class="on">All</a></li> <!-- 활성화 시 a링크에 class="on" -->
+					<li><a href="#">All</a></li>
 					<li><a href="#">Packaging</a></li>
-					<li><a href="#">Delivery</a></li>
+					<li class="on"><a href="#">Delivery</a></li>
 					<li><a href="#">Arrive</a></li>
 					<li><a href="#">Error</a></li>
 					<li><a href="#">Delete</a></li>
@@ -449,11 +450,11 @@
 			</div>
 			<div class="btnWrap">
 				<div class="bbsSearch">
-					<select style="width:80px;">
+					<select>
 						<option>선택</option>
 						<option>검색</option>
 					</select>
-					<input type="text" class="txt" style="width:240px;" />
+					<input type="text" class="txt" />
 					<a href="#" class="mBtnLf">검색</a>
 				</div>
 				<div class="btnRight">
