--- a/layout_guide.html
+++ b/layout_guide.html
@@ -73,7 +73,6 @@
 						</ul>
 					</li>
 				</ul>
-				<div class="bg2depth"><div></div></div>
 			</div>
 		</div>
 	</div>
@@ -596,11 +595,11 @@
 			</div>
 			<div class="btnWrap">
 				<div class="bbsSearch">
-					<select style="width:80px;">
+					<select>
 						<option>선택</option>
 						<option>검색</option>
 					</select>
-					<input type="text" class="txt" style="width:240px;" />
+					<input type="text" class="txt" />
 					<a href="#" class="mBtnLf">검색</a>
 				</div>
 				<div class="btnRight">
